--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
    
     
-    <div id="starttext" class="type-text zindex"><p id="type-text" class="web-text">Sei ein Teil eines großen Autoren-Teams und <span class="typed-animation" id="typed"></span> <br><span style="color: lightgrey;">d</span>eine Version der Meernixe noch heute</p></div>  
+    <div id="starttext" class="type-text zindex"><p id="type-text" class="web-text">Sei ein Teil eines großen Autoren-Teams und <span class="typed-animation" id="typed">deine Version der Meernixe noch heute</p></div>  
 </div>
     <script>
         var typed = new Typed('#typed', {
